gateway.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    - http:
        paths:
          - path: /school
            pathType: Prefix
            backend:
              service:
                name: school-service
                port:
                  number: 8001
          - path: /student
            pathType: Prefix
            backend:
              service:
                name: student-service
                port:
                  number: 8002
      host: nuplul.com
